Adding honors and deleting console.logs
